--- a/package.json
+++ b/package.json
@@ -1,39 +1,49 @@
 {
-  "name": "v14-logger-bot",
-  "version": "0.0.1",
-  "description": "Beş v14 log / Denetim Botu",
-  "main": "beş_logger.js",
+  "name": "discord-v14-vanity-url",
+  "version": "1.0.0",
+  "description": "Beş v14 Vanity URL Bot",
+  "main": "five.js",
   "scripts": {
-    "start": "node beş_logger.js"
+    "start": "node five.js"
   },
   "engines": {
     "node": "16.x"
   },
-  "author": "Beş",
-  "license": "MIT",
+  "author": "Bes-js",
+  "license": "GPL-3.0",
   "dependencies": {
-    "discord-logs": "^2.2.1",
-    "discord.js": "^14.8.0"
+    "discord-url": "^6.0.0",
+    "discord.js": "^14.11.0"
   },
   "keywords": [
+    "Luppux",
     "Beş#0005",
+    "five",
+    "fivesobes",
+    "Bes",
+    "fives",
+    "discord-url",
+    "discord-v14-vanity-url",
+    "discord-v14-vanity",
+    "vanity-url-v14",
+    "v14-vanity-url",
     "Beş",
     "Bes",
     "5",
     "v14",
-    "v14 logger",
-    "v14 log",
-    "v14-logger",
+    "v14 vanity",
+    "v14 vanity-url",
+    "v14-vanity",
     "discord-v14",
     "v14 bot",
     "discord v14",
-    "discord log botu",
-    "discord logger bot",
-    "discord denetim bot",
+    "discord url botu",
+    "discord url bot",
+    "discord vanity bot",
     "discord",
-    "v14 denetim",
-    "denetim",
-    "logger",
-    "log"
+    "v14 vanity",
+    "vanity",
+    "url",
+    "vanity-url"
   ]
 }
